--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -4,9 +4,20 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:   
-    - run: |
-        npm ci
-        npm run build
-        npm test
+    steps:
+      - name: Récupérer le code source
+        uses: actions/checkout@v2
+
+      - name: Installer les outils de compilation
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+
+      - name: Compiler le projet
+        run: |
+          gcc -o sobel src/clock.c src/morph.c src/sobel.c src/splitMerge.c src/yuvDisplay.c src/yuvRead.c 
+
+      - name: Exécuter le programme
+        run: |
+          ./sobel
       
