--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -11,11 +11,11 @@ jobs:
       - name: Installer les outils de compilation
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential
+          sudo apt-get install -y build-essential cmake libsdl2-dev
 
       - name: Compiler le projet
         run: |
-          gcc -o sobel src/clock.c src/morph.c src/sobel.c src/splitMerge.c src/yuvDisplay.c src/yuvRead.c 
+          make
 
       - name: Exécuter le programme
         run: |
