Fixes to how the workflow compiles the project 2

--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Compiler le projet
         run: |
+          cmake ..
           make
 
       - name: Exécuter le programme
