Fixes to how the workflow compiles the project 3

--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Compiler le projet
         run: |
-          cmake ..
+          cmake .
           make
 
       - name: Exécuter le programme
