--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Installer les outils de compilation
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake libsdl2-dev
+          sudo apt-get install -y build-essential cmake libsdl2-ttf-dev
 
       - name: Compiler le projet
         run: |
