--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/checkout@v4
     - name: compile
       run: |
+        cd src
         make
     - name: execute
       run: |
