Removed dependancies install

--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -28,10 +28,10 @@ jobs:
       - name: Récupérer le code source
         uses: actions/checkout@v2
 
-      - name: Installer les outils de compilation
-        run: |
-          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-          choco install mingw --version=8.1.0 -y
+      # - name: Installer les outils de compilation
+        # run: |
+          # choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+          # choco install mingw --version=8.1.0 -y
 
       - name: Compiler le projet
         run: |
