--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,6 +14,14 @@ jobs:
     - name: get file src git
       uses: actions/checkout@v4
       
+    # For Dependencies
+    - name: Install SDL2
+      run: sudo apt-get update && sudo apt-get install -y libsdl2-dev
+    - name: Install SDL2 ttf
+      run: sudo apt-get update && sudo apt-get install -y libsdl2-ttf-dev
+    - name: Set up CMake
+      run: sudo apt-get update && sudo apt-get install -y cmake
+      
     - name: Configure and Build
       run: |
         mkdir build
