Fix the job matrix structure

--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -1,4 +1,4 @@
-name: CI for sobel_morpho github
+name: CI discrete jobs
 on: push
 
 jobs:
@@ -27,11 +27,6 @@ jobs:
     steps:
       - name: Récupérer le code source
         uses: actions/checkout@v2
-
-      # - name: Installer les outils de compilation
-        # run: |
-          # choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-          # choco install mingw --version=8.1.0 -y
 
       - name: Compiler le projet
         run: |
