--- a/.github/workflows/wfMatrix.yaml
+++ b/.github/workflows/wfMatrix.yaml
@@ -1,5 +1,4 @@
-name: CI for sobel_morpho
-
+name: CI job matrix
 on:
   push:
 
@@ -15,37 +14,31 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installer les outils de compilation Ubuntu
-      	if ${{ matrix.os == 'ubuntu-latest' }}
+      	if: ${{ matrix.os }} == 'ubuntu-latest' 
         run: |
             sudo apt-get update
             sudo apt-get install -y build-essential cmake libsdl2-ttf-dev
-
-      - name: Installer les outils de compilation Windows
-      	if ${{ matrix.os == 'windows-latest' }}
-        run: |
-            choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-            choco install mingw --version=8.1.0 -y
             
             
       - name: Compiler le projet Ubuntu
-      	if ${{ matrix.os == 'ubuntu-latest' }}
+      	if: ${{ matrix.os }} == 'ubuntu-latest' 
         run: |
             cmake .
             make
             
       - name: Compiler le projet Windows
-      	if ${{ matrix.os == 'windows-latest' }}
+      	if: ${{ matrix.os }} == 'windows-latest' 
         run: |
             cmake -G "MinGW Makefiles" .
             mingw32-make
 
 
       - name: Exécuter le programme Ubuntu
-      	if ${{ matrix.os == 'ubuntu-latest' }}
+      	if: ${{ matrix.os }} == 'ubuntu-latest' 
         run: |
             Release/sobel
       
       - name: Exécuter le programme Windows
-      	if ${{ matrix.os == 'windows-latest' }}
+      	if: ${{ matrix.os }} == 'windows-latest' 
         run: |
             Release/sobel.exe
