--- a/.github/workflows/wfMatrix.yaml
+++ b/.github/workflows/wfMatrix.yaml
@@ -14,31 +14,31 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installer les outils de compilation Ubuntu
-      	if: ${{ matrix.os }} == 'ubuntu-latest' 
+      	if: matrix.os == 'ubuntu-latest' 
         run: |
             sudo apt-get update
             sudo apt-get install -y build-essential cmake libsdl2-ttf-dev
             
             
       - name: Compiler le projet Ubuntu
-      	if: ${{ matrix.os }} == 'ubuntu-latest' 
+      	if: matrix.os == 'ubuntu-latest' 
         run: |
             cmake .
             make
             
       - name: Compiler le projet Windows
-      	if: ${{ matrix.os }} == 'windows-latest' 
+      	if: matrix.os == 'windows-latest' 
         run: |
             cmake -G "MinGW Makefiles" .
             mingw32-make
 
 
       - name: Exécuter le programme Ubuntu
-      	if: ${{ matrix.os }} == 'ubuntu-latest' 
+      	if: matrix.os == 'ubuntu-latest' 
         run: |
             Release/sobel
       
       - name: Exécuter le programme Windows
-      	if: ${{ matrix.os }} == 'windows-latest' 
+      	if: matrix.os == 'windows-latest' 
         run: |
             Release/sobel.exe
